# snowsql

./: Cargo.toml
snowflake-derive/: Cargo.toml
snowflake-derive/src/: lib.rs
snowflake-deserialize/: Cargo.toml
snowflake-deserialize/src/: datetime.rs  error.rs  lib.rs
snowsql-derive/: Cargo.toml
snowsql-derive/src/: field_attr.rs  lib.rs  struct_attr.rs  struct_data.rs  struct_field.rs
snowsql-deserialize/: Cargo.toml
snowsql-deserialize/src/: bindings.rs  datetime.rs  error.rs  lib.rs  raw_row.rs  row.rs
src/: client.rs  error.rs  jwt.rs  lib.rs  pagination.rs  partitions.rs  selectable.rs
tests/: deserialize.rs  deserialize_weird_string.rs  test_derive.rs
