[package]
name = "snowsql"
version = "12.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake. Forked from https://github.com/Ripper53/snowflake-connector"
readme = "README.md"
keywords = ["snowflake", "data-science"]
categories = ["database"]
exclude = ["/environment_variables"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = [ "time" ]
time = [ "snowsql-deserialize/time" ]

[dependencies]
snowsql-deserialize = { path = "snowsql-deserialize" }
snowsql-derive = { path = "snowsql-derive" }

rsa = { version = "0.9", default-features = false, features = [ "pem", "std", "sha2" ] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [ "json", "rustls-tls", "gzip" ] }
uuid = { version = "1", features = ["v4", "fast-rng" ] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"


[workspace]
members = [
    "snowsql-deserialize",
    "snowsql-derive",
]
