[package]
name = "snowsql-deserialize"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Connect to Snowflake, used with snowflake-connector crate. Forked from https://github.com/Ripper53/snowflake-connector"
keywords = ["snowflake", "data-science"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]
time = [ "dep:time" ]

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = "1"
time = { version = "0.3", optional = true, features = [ "macros" ] }
thiserror = "1"
serde_json = "1"
